16-ServicesIngressAndNetworkingFundamentals/11-BareMetalIngressOnYourOwnDomain/myservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myservice
  labels:
    app: myapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: web
        image: nginx:1.25   # stand-in app; listens on 80, mapped to targetPort below
        ports:
        - containerPort: 8080
